# backend/routes/city.js
@@ -6,7 +6,7 @@ const { isAuth, isAdmin, upload } = require("../middlewares/");
 const maxImageCount = 5;
 router.get("/search", city.search.bind(city));
 router.post(
-  "/:countryId",
+  "/",
   isAuth,
   isAdmin,
   upload.array("city", maxImageCount),
@@ -20,10 +20,11 @@ router.patch(
   city.update.bind(city)
 );
 
-router.delete("/:id", isAuth, isAdmin, city.delete.bind(city));
 router.delete("/:id/photos", isAuth, isAdmin, city.deletePhoto.bind(city));
+router.delete("/:id", isAuth, isAdmin, city.delete.bind(city));
 
 // user
+router.get("/all", city.all.bind(city));
 router.get("/:id", city.getCity.bind(city));
-router.get("/all/:countryId", city.getCities.bind(city));
+// router.get("/all/:countryId", city.getCities.bind(city));
 module.exports = router;
